# pydantic-br-validator

./: .coveragerc  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-publish.yml  pythonpackage.yml
pydantic_br_validator/: __init__.py  field_class_errors.py  field_erros.py  pydantic_br_validator.py
pydantic_br_validator/.github/workflows/: ci.yaml
pydantic_br_validator/fields/: base_field.py  base_field_v2.py  cnpj_field.py  rg_field.py
pydantic_br_validator/validators/: base_validator.py  cnpj_validator.py  rg_validator.py
tests/: test_cep.py  test_cnh.py  test_cnpj.py  test_cpf.py  test_rg.py  test_version.py
