[project]
name = "pydantic-br-validator"
version = "0.7.0"
description = "Uma biblioteca python com modelos de validação para os principais documentos brasileiros"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pre-commit>=3.7.0",
    "pydantic==2.11.7",
]

[dependency-groups]
dev = [
    "coverage>=7.4.2",
    "faker>=23.2.1",
    "pytest-cov>=4.1.0",
    "pytest>=8.0.1",
    "ruff>=0.2.2",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.5.0",
]
